--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "license": "ISC",
     "dependencies": {
         "@sendgrid/mail": "^7.4.7",
+        "bcrypt": "^5.0.1",
         "env-cmd": "^10.1.0",
         "hbs": "^4.1.2",
         "jsonwebtoken": "^8.5.1",
@@ -22,7 +23,7 @@
         "nodemon": "^2.0.13",
         "uglify-js": "^3.14.2",
         "validator": "^13.6.0",
-        "bcrypt": "^5.0.1"
+        "request": "^2.88.2"
     },
     "devDependencies": {
         "express": "^4.17.1",
