--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
         "nodemon": "^2.0.13",
         "uglify-js": "^3.14.2",
         "validator": "^13.6.0",
-        "request": "^2.88.2"
+        "request": "^2.88.2",
+        "express": "^4.17.1",
+        "handlebars": "^4.7.7"
     },
     "devDependencies": {
         "express": "^4.17.1",
